--- a/index.html
+++ b/index.html
@@ -117,12 +117,10 @@
 
 <!-- Javascripts for highchart -->
 
-<script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
+<script src="js/jquery-2.2.3.min.js"></script>
 
 <!-- <script src="https://code.highcharts.com/highcharts.js"></script> -->
-<script src="http://code.highcharts.com/stock/highstock.js"></script>
-<!-- <script src="https://code.highcharts.com/highcharts-more.js"></script> -->
-<!-- <script src="https://code.highcharts.com/modules/exporting.js"></script> -->
+<script src="js/highstock.js"></script>
 
 <script>
 // some globally defined variables
