--- a/index.html
+++ b/index.html
@@ -15,19 +15,6 @@
 </head>
 <body>
 <div class="container-fluid">
-  <div class="row">
-    <div class="col-xs-12 dc-data-count dc-chart" id="data-count">
-      <h2>Forecasting Support System</h2>
-      <!-- <small>
-        <span class="filter-count"></span> selected out of <span class="total-count"></span> records |
-         <a id="all" href="#">Reset All</a>
-        </span>
-      </small> -->
-    </div>
-  </div>
-
-
-
   <div class="row" id="control-row">
     <div class="col-xs-3 pie-chart">
       <!-- <div class="dc-chart" id="chart-ring-year"><h4>Supplier <small><a id="year">reset</a></small></h4></div>
@@ -898,7 +885,7 @@ var button = document.getElementById("show_end_of_life");
        var old_label = "HTC Desire 620 (gen_upgrade)", successor_label = "HTC Desire 620 (successor)", competitor_label = "Hua Ascend G620S (gen_upgrade)";
       //  var old_color = "#8c7373", successor_color = "#996666", competitor_color = "#b34d4d";
       if(jQuery("#show_end_of_life").text() == "Show"){
-        var color_old = phone_colors[curr_phone], color_successor = "#881b1b",color_competitor = phone_colors[curr_competitor];
+        var color_old = phone_colors[curr_phone], color_competitor = phone_colors[curr_competitor];
 
 
        if(!(old_label in visible_campaigns)){
@@ -938,7 +925,7 @@ var button = document.getElementById("show_end_of_life");
        phone_highChart.addSeries({
                     name: successor_label,
                     data:  successor_data,
-                    color: color_successor,
+                    color: color_old,
                     dashStyle: 'longdash',
                 });
 
